# yolo_qt

./: .gitignore  Main_Program.py  built_ui.bat  config.py  detect.py  readme.md  train.py  val.py
dev/: api.md  pyproject.toml  readme.md  requirement.txt  test_api.py
functions/: camera_api.py  update_file.py  yolo_api.py
resource/: display_apply.py
widgets/display_apply/: Ui_display.py  display.ui  display_apply.py  resources.qrc
widgets/display_apply/functions/: camera_yolo_api.py  draw_yolo.py  file_cp_selector.py  media_handler.py  title_bar_dragger.py  yolo_api.py
widgets/display_train_info/: csv_view.py  photo_viewer.py  view_combine.py
widgets/yolo_data_yaml/: Ui_main.py  main.ui  yolo_data_yaml.py
widgets/yolo_data_yaml/functions/: sub_dir_names_len.py
